--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
@@ -20,7 +21,6 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-signature-capture": "^0.4.12",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4"
   },
