--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-file-system": "^13.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -21,9 +22,9 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-signature-canvas": "^4.3.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4"
-
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
