--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~43.0.2",
     "expo-file-system": "^13.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "8.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
