--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.8.0",
     "react-native-signature-canvas": "^4.3.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
