--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-google-app-auth": "^9.0.0",
     "expo-status-bar": "~1.1.0",
-    "firebase": "8.2.3",
+    "firebase": "9.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
