--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "firebase": "9.6.4",
+    "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -25,7 +26,8 @@
     "react-native-screens": "~3.8.0",
     "react-native-signature-canvas": "^4.3.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
